# AI_assignment2

./: README.md  assignment2.ipynb  main.py  pyproject.toml
